2001-08-18  Philippe Elie  <ph_e@club-internet.fr>
 
 	* Makefile.in:
	* dae/Makefile.in:
	* pp/Makefile.in:
	* doc/Makefile.in:
 	* gui/Makefile.in: add uninstall target
 
2001-08-18  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: tiny cleanup
 
2001-08-17  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c:
	* TODO: minor cleanup.

2001-08-16  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprofile:
	* dae/op_start:
	* doc/oprofile.1.in: document and use op_dump

2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump version to 0.0.5cvs
 
2001-08-16  John Levon  <moz@compsoc.man.ac.uk>

	* all Makefile.in: mkdir install files

2001-08-15  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c: fix a FILE* leak in opd_get_ascii_maps()

2001-08-14  John Levon  <moz@compsoc.man.ac.uk>

	* op_syscalls.c: don't return negative hashes !
	  revert dname len "fix"
	  use a much better hash function

	* dae/opd_proc.c: protect against negative hashes
 
2001-08-14  John Levon  <moz@compsoc.man.ac.uk>

	* op_syscalls.c: some small fixes

	* oprofile.c: add back unmasking code during set_gate, but only
	  LVTPC
 
2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h: 2.4.8 doesn't either. *sigh*. looks like we need
	  some autoconfery :(
 
2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h: 2.4.7-linus doesn't include the Andrew Morton
	  complete_and_exit(). Hopefully this will make it into 2.4.8,
	  I'm banking on this.

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_dump:
	* doc/oprofile.sgml:
	* dae/Makefile.in: a little utility for dumping

2001-08-11  Dave Jones  <davej@suse.de>

	* oprofile.h:
	* oprofile.c: back-compat code and use of new struct completion
	  for the thread

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: corner case where an a miss against a full count,
	  we were attributing wrong (reported by Bob Montgomery)

2001-08-11  John Levon  <moz@compsoc.man.ac.uk>
