@@ -1,3 +1,8 @@
+2001-08-19  Philippe Elie  <ph_e@club-internet.fr>
+
+	* oprofile.c: use symbolic constant for all apic setup, no generated
+	  code change
+
 2001-08-18  Philippe Elie  <ph_e@club-internet.fr>
  
  	* Makefile.in:
